Fix text alignment

--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ body {
   line-height: 2;
   font-size: 15px;
   margin-bottom: 20px;
+  text-align: justify;
 }
 
 .about-team {
